--- a/S02.03-Exercise-Polish/app/src/main/res/layout/activity_forecast.xml
+++ b/S02.03-Exercise-Polish/app/src/main/res/layout/activity_forecast.xml
@@ -32,11 +32,12 @@
 
     <!--COMPLETED (2) Add a TextView that you will show the user if there is an error loading content-->
     <!--COMPLETED (3) Make the width and the height wrap_content-->
-    <!--TODO (4) Give the TextView a default error message stating that an error occurred (use strings.xml)-->
+    <!--COMPLETED (4) Give the TextView a default error message stating that an error occurred (use strings.xml)-->
     <!--TODO (5) Set the default visibility of the TextView to invisible-->
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/message_error" />
 
     <!--TODO (12) Add a ProgressBar to show the user content is loading-->
     <!--TODO (13) Make the width and height of the ProgressBar 42dp-->
