--- a/S02.03-Exercise-Polish/app/src/main/res/layout/activity_forecast.xml
+++ b/S02.03-Exercise-Polish/app/src/main/res/layout/activity_forecast.xml
@@ -41,9 +41,12 @@
         android:text="@string/message_error"
         android:visibility="invisible" />
 
-    <!--TODO (12) Add a ProgressBar to show the user content is loading-->
-    <!--TODO (13) Make the width and height of the ProgressBar 42dp-->
+    <!--COMPLETED (12) Add a ProgressBar to show the user content is loading-->
+    <!--COMPLETED (13) Make the width and height of the ProgressBar 42dp-->
     <!--TODO (14) Set the layout_gravity of the ProgressBar to center-->
     <!--TODO (15) Set the default visibility of the ProgressBar to invisible-->
+    <ProgressBar
+        android:layout_width="@dimen/progressbar_size"
+        android:layout_height="@dimen/progressbar_size" />
 
 </FrameLayout>
