--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/activity_forecast.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/activity_forecast.xml
@@ -20,10 +20,11 @@
 
     <!-- COMPLETED (2) Replace ScrollView and TextView with RecyclerView-->
     <!-- COMPLETED (3) Give the RecyclerView an id of @+id/recyclerview_forecast-->
-    <!--TODO (4) Set the width and the height of the RecyclerView to match_parent-->
+    <!-- COMPLETED (4) Set the width and the height of the RecyclerView to match_parent-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_forecast"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/tv_error_message_display"
