--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
@@ -4,4 +4,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tv_weather_data" />
 </LinearLayout>
