--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
@@ -5,5 +5,6 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_weather_data" />
+        android:id="@+id/tv_weather_data"
+        android:textSize="@dimen/list_item_text_size" />
 </LinearLayout>
