--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
@@ -8,5 +8,6 @@
         android:id="@+id/tv_weather_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/list_item_text_padding"
         android:textSize="@dimen/list_item_text_size" />
 </LinearLayout>
