Add a View to the layout with a width of mathc_parent and height of 1dp

--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
@@ -10,4 +10,8 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/list_item_text_padding"
         android:textSize="@dimen/list_item_text_size" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/list_item_view_height" />
 </LinearLayout>
