Set the background color to #dadada

--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
@@ -13,5 +13,6 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/list_item_view_height" />
+        android:layout_height="@dimen/list_item_view_height"
+        android:background="@color/list_item_view_color" />
 </LinearLayout>
