Set the left and right margins to 8dp

--- a/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/layout/forecast_list_item.xml
@@ -14,5 +14,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_view_height"
+        android:layout_marginLeft="@dimen/list_item_view_margin"
+        android:layout_marginRight="@dimen/list_item_view_margin"
         android:background="@color/list_item_view_color" />
 </LinearLayout>
