--- a/S03.01-Exercise-RecyclerView/app/src/main/res/values/dimens.xml
+++ b/S03.01-Exercise-RecyclerView/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="list_item_text_size">22sp</dimen>
     <dimen name="list_item_text_padding">16dp</dimen>
     <dimen name="list_item_view_height">1dp</dimen>
+    <dimen name="list_item_view_margin">8dp</dimen>
 </resources>
