--- a/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
+++ b/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
@@ -16,20 +16,12 @@
 -->
 <!-- COMPLETED (1) Change the FrameLayout to a vertical LinearLayout -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp">
 
-    <!-- TODO (2) Remove the tv_display_weather TextView -->
-    <!-- Text that describes the weather summary for a given day -->
-    <TextView
-        android:id="@+id/tv_display_weather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        tools:text="Saturday, October 1 - Sunny - 78° / 63°"/>
+    <!-- COMPLETED (2) Remove the tv_display_weather TextView -->
     <!-- TODO (3) Add a TextView for the selected day's date -->
     <!-- TODO (4) Add a TextView for the selected day's weather description -->
     <!-- TODO (5) Add a TextView for the selected day's high temperature -->
