--- a/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
+++ b/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
@@ -34,7 +34,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!-- TODO (5) Add a TextView for the selected day's high temperature -->
+    <!-- COMPLETED (5) Add a TextView for the selected day's high temperature -->
+    <TextView
+        android:id="@+id/tv_weather_day_high_temperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <!-- TODO (6) Add a TextView for the selected day's low temperature -->
     <!-- TODO (7) Add a TextView for the selected day's humidity -->
     <!-- TODO (8) Add a TextView for the selected day's pressure -->
