--- a/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
+++ b/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
@@ -46,7 +46,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!-- TODO (7) Add a TextView for the selected day's humidity -->
+    <!-- COMPLETED (7) Add a TextView for the selected day's humidity -->
+    <TextView
+        android:id="@+id/tv_weather_day_humidity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <!-- TODO (8) Add a TextView for the selected day's pressure -->
     <!-- TODO (9) Add a TextView for the selected day's wind -->
 
