--- a/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
+++ b/S09.05-Exercise-MoreDetails/app/src/main/res/layout/activity_detail.xml
@@ -52,7 +52,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!-- TODO (8) Add a TextView for the selected day's pressure -->
+    <!-- COMPLETED (8) Add a TextView for the selected day's pressure -->
+    <TextView
+        android:id="@+id/tv_weather_day_pressure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <!-- TODO (9) Add a TextView for the selected day's wind -->
 
 </LinearLayout>
