--- a/S10.04-Exercise-Notifications/app/src/main/res/xml/pref_general.xml
+++ b/S10.04-Exercise-Notifications/app/src/main/res/xml/pref_general.xml
@@ -36,8 +36,9 @@
     <!-- COMPLETED (10) Add a boolean value for showing notifications by default to res/bools.xml -->
 
     <!-- COMPLETED (11) Add a checkbox preference for enabling and disabling notifications -->
-    <!-- TODO (12) Set the default of whether or not to show preferences using bools.xml -->
+    <!-- COMPLETED (12) Set the default of whether or not to show preferences using bools.xml -->
     <CheckBoxPreference
+        android:defaultValue="@bool/show_notifications_by_default"
         android:key="@string/pref_enable_notifications_key"
         android:summaryOff="@string/pref_enable_notifications_false"
         android:summaryOn="@string/pref_enable_notifications_true"
