Use ConstraintLayout to create the new list item

--- a/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
+++ b/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
@@ -15,4 +15,70 @@
      limitations under the License.
 -->
 <!-- COMPLETED (2) Remove the old layout -->
-<!-- TODO (3) Use ConstraintLayout to create the new list item layout -->
+<!-- COMPLETED (3) Use ConstraintLayout to create the new list item layout -->
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="@dimen/weather_list_item_padding">
+
+    <!-- This TextView holds the weather data for one particular day in the forecast -->
+    <ImageView
+        android:id="@+id/imageWeatherCondition"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/art_clear" />
+
+    <TextView
+        android:id="@+id/textWeatherDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/weather_list_item_padding"
+        android:layout_marginStart="@dimen/weather_list_item_padding"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintLeft_toLeftOf="@id/imageWeatherCondition"
+        app:layout_constraintStart_toEndOf="@id/imageWeatherCondition"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/today" />
+
+    <TextView
+        android:id="@+id/textWeatherCondition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintLeft_toLeftOf="@id/textWeatherDate"
+        app:layout_constraintTop_toBottomOf="@id/textWeatherDate"
+        tools:text="@string/condition_800" />
+
+    <TextView
+        android:id="@+id/textWeatherTemperatureMax"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="18" />
+
+    <TextView
+        android:id="@+id/textWeatherTemperatureMin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/weather_list_item_padding"
+        android:layout_marginRight="@dimen/weather_list_item_padding"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textWeatherTemperatureMax"
+        app:layout_constraintRight_toLeftOf="@id/textWeatherTemperatureMax"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="22" />
+
+</android.support.constraint.ConstraintLayout>
