Set temperature Views to be of a fixed width

--- a/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
+++ b/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
@@ -59,7 +59,7 @@
 
     <TextView
         android:id="@+id/textWeatherTemperatureMax"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,7 +70,7 @@
 
     <TextView
         android:id="@+id/textWeatherTemperatureMin"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/weather_list_item_padding"
         android:layout_marginRight="@dimen/weather_list_item_padding"
