--- a/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
+++ b/S11.01-Exercise-NewListItemLayout/app/src/main/res/layout/forecast_list_item.xml
@@ -61,6 +61,7 @@
         android:id="@+id/textWeatherTemperatureMax"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/weather_list_item_padding"
         android:layout_marginRight="@dimen/weather_list_item_padding"
+        android:gravity="end"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/textWeatherTemperatureMax"
