--- a/S11.02-Exercise-TodayListItem/app/src/main/res/values-port/bools.xml
+++ b/S11.02-Exercise-TodayListItem/app/src/main/res/values-port/bools.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <bool name="use_today_layout_by_default">false</bool>
+    <bool name="use_today_layout_by_default">true</bool>
 </resources>
