--- a/S11.02-Exercise-TodayListItem/app/src/main/res/layout/forecast_list_item_today.xml
+++ b/S11.02-Exercise-TodayListItem/app/src/main/res/layout/forecast_list_item_today.xml
@@ -35,6 +35,7 @@
         android:id="@+id/weather_icon"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="@id/guideline_left"
         app:layout_constraintRight_toRightOf="@id/guideline_left"
         app:layout_constraintTop_toBottomOf="@id/date"
