--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/primary_weather_info.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/primary_weather_info.xml
@@ -30,6 +30,16 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent=".7" />
 
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="@dimen/default_margin"
+            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
+            app:layout_constraintRight_toRightOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/date"
+            tools:src="@drawable/art_clouds" />
+
     </android.support.constraint.ConstraintLayout>
 
 </layout>
