--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/primary_weather_info.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/primary_weather_info.xml
@@ -40,6 +40,16 @@
             app:layout_constraintTop_toBottomOf="@id/date"
             tools:src="@drawable/art_clouds" />
 
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
+            app:layout_constraintRight_toRightOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/icon"
+            tools:text="@string/condition_803" />
+
     </android.support.constraint.ConstraintLayout>
 
 </layout>
