--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/primary_weather_info.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/primary_weather_info.xml
@@ -63,6 +63,16 @@
             app:layout_constraintTop_toBottomOf="@id/date"
             tools:text="15\u00b0" />
 
+        <TextView
+            android:id="@+id/temperature_low"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            app:layout_constraintBottom_toBottomOf="@id/description"
+            app:layout_constraintLeft_toLeftOf="@id/guideline_right"
+            app:layout_constraintRight_toRightOf="@id/guideline_right"
+            tools:text="8\u00b0" />
+
     </android.support.constraint.ConstraintLayout>
 
 </layout>
