Create a layout for extra weather details

--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
@@ -37,7 +37,7 @@
 <!-- COMPLETED (27) Using ConstraintLayout, create the primary weather info layout -->
 <!-- TODO (32) Include the primary_weather_info layout -->
 
-<!-- TODO (28) Create a layout called extra_weather_details.xml -->
+<!-- COMPLETED (28) Create a layout called extra_weather_details.xml -->
 <!-- TODO (29) Surround the entire layout with <layout/> tags for data binding -->
 <!-- TODO (30) Using ConstraintLayout, create the extra weather details layout -->
 <!-- TODO (33) Include the extra_weather_details layout -->
