Surround the entire layout with layout tags for data binding

--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
@@ -38,7 +38,7 @@
 <!-- TODO (32) Include the primary_weather_info layout -->
 
 <!-- COMPLETED (28) Create a layout called extra_weather_details.xml -->
-<!-- TODO (29) Surround the entire layout with <layout/> tags for data binding -->
+<!-- COMPLETED (29) Surround the entire layout with <layout/> tags for data binding -->
 <!-- TODO (30) Using ConstraintLayout, create the extra weather details layout -->
 <!-- TODO (33) Include the extra_weather_details layout -->
 
