--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/extra_weather_details.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/extra_weather_details.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/default_padding">
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline_extra_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_percent=".2" />
 
     </android.support.constraint.ConstraintLayout>
 
