Surround the entire layout with layout tags for data binding

--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
@@ -28,7 +28,7 @@
 
 <!-- COMPLETED (31) Delete the old layout completely -->
 
-<!-- TODO (35) Surround the entire layout with <layout/> tags for data binding -->
+<!-- COMPLETED (35) Surround the entire layout with <layout/> tags for data binding -->
 
 <!-- TODO (34) Create a LinearLayout to contain two included layouts that share equal space -->
 
@@ -41,3 +41,6 @@
 <!-- COMPLETED (29) Surround the entire layout with <layout/> tags for data binding -->
 <!-- COMPLETED (30) Using ConstraintLayout, create the extra weather details layout -->
 <!-- TODO (33) Include the extra_weather_details layout -->
+<layout>
+
+</layout>
