Give IDs to included weather details layouts

--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/activity_detail.xml
@@ -48,9 +48,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/primary_weather_info" />
+        <include
+            android:id="@+id/weather_primary"
+            layout="@layout/primary_weather_info" />
 
-        <include layout="@layout/extra_weather_details" />
+        <include
+            android:id="@+id/weather_extra"
+            layout="@layout/extra_weather_details" />
 
     </LinearLayout>
 
