--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/extra_weather_details.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/extra_weather_details.xml
@@ -12,18 +12,21 @@
             android:id="@+id/guideline_extra_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintGuide_percent=".2" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline_extra_middle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintGuide_percent=".5" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline_extra_bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintGuide_percent=".8" />
 
         <TextView
