Set weather extra details layout height to a fixed value

--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/extra_weather_details.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/layout/extra_weather_details.xml
@@ -6,7 +6,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/weather_extra_details_height"
         android:padding="@dimen/default_padding">
 
         <TextView
