--- a/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/values/dimens.xml
+++ b/S11.03-Exercise-DetailLayoutAndDataBinding/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="default_padding">16dp</dimen>
     <dimen name="default_margin">16dp</dimen>
+    <dimen name="weather_extra_details_height">150dp</dimen>
 </resources>
