--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/values/dimens.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="forecast_detail_vertical_padding">16dp</dimen>
     <dimen name="today_icon">96dp</dimen>
     <dimen name="list_icon">40dp</dimen>
+    <dimen name="forecast_padding_bottom">8dp</dimen>
     <dimen name="forecast_text_size">28dp</dimen>
     <dimen name="forecast_temperature_space">4dp</dimen>
     <dimen name="today_forecast_list_item_vertical_padding">16dp</dimen>
