--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/extra_weather_details.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/extra_weather_details.xml
@@ -15,7 +15,7 @@
      limitations under the License.
 -->
 <!-- TODO (4) Color the background and label text color appropriately -->
-<!-- TODO (5) Replace dimension values with @dimen resources -->
+<!-- COMPLETED (5) Replace dimension values with @dimen resources -->
 <!-- TODO (6) Use sans-serif font family for label TextViews -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -25,12 +25,12 @@
         android:id="@+id/extra_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="16dp"
-        android:paddingEnd="32dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:paddingStart="32dp"
-        android:paddingTop="16dp">
+        android:paddingBottom="@dimen/forecast_detail_vertical_padding"
+        android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
+        android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
+        android:paddingRight="@dimen/forecast_detail_horizontal_padding"
+        android:paddingStart="@dimen/forecast_detail_horizontal_padding"
+        android:paddingTop="@dimen/forecast_detail_vertical_padding">
 
         <!-- This guideline divides the layout into a left and right half and is used for alignment -->
         <android.support.constraint.Guideline
