Use sans-serif-light font family for the temperature TextViews

--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/primary_weather_info.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/primary_weather_info.xml
@@ -24,7 +24,7 @@
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <!-- TODO (14) Color the description, high temperature, and low temperature appropriately -->
 <!-- COMPLETED (15) Replace dimension values with @dimen resources -->
-<!-- TODO (16) Use sans-serif-light font family for the temperature TextViews -->
+<!-- COMPLETED (16) Use sans-serif-light font family for the temperature TextViews -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
@@ -104,6 +104,7 @@
             android:id="@+id/high_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
             android:textSize="@dimen/today_forecast_list_item_high_temperature_text_size"
             app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
             app:layout_constraintHorizontal_bias="0.45"
@@ -125,6 +126,7 @@
             android:id="@+id/low_temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
             android:textSize="@dimen/list_item_low_temperature_text_view_size"
             app:layout_constraintBaseline_toBaselineOf="@+id/weather_description"
             app:layout_constraintLeft_toLeftOf="@+id/high_temperature"
