Color the background for today's weather data

--- a/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/S12.01-Exercise-DimensionsColorsAndFonts/app/src/main/res/layout/list_item_forecast_today.xml
@@ -26,7 +26,7 @@
   - but again, we wanted to avoid making things too complicated.                                 -
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <!-- COMPLETED (10) Color the TextViews for weather data appropriately -->
-<!-- TODO (11) Color the background for today's weather data appropriately -->
+<!-- COMPLETED (11) Color the background for today's weather data appropriately -->
 <!-- COMPLETED (12) Replace dimension values with @dimen resources -->
 <!-- COMPLETED (13) Use sans-serif-light font family for the temperature TextViews -->
 <android.support.constraint.ConstraintLayout
@@ -35,6 +35,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
     android:paddingBottom="@dimen/today_forecast_list_item_vertical_padding"
     android:paddingTop="@dimen/today_forecast_list_item_vertical_padding">
 
